# slacktokengetter

./: .gitattributes  .gitignore  .gitmodules  .python-version  README.md  pyproject.toml
.github/workflows/: build.yml  bump-version.yml  publish-pypi.yml  publish-testpypi.yml  publish.yml
src/slacktokengetter/: __init__.py
