[project]
name = "slacktokengetter"
version = "0.1.7"
description = "Gets Slack tokens - wrapper around slacktokens providing a CLI entrypoint"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "slacktokens",
    "cryptography==43.*",
    "keyring==25.*",
]

[project.scripts]
slacktokengetter = "slacktokengetter:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/slacktokengetter", "vendor/pycookiecheat/src/pycookiecheat"]

[tool.hatch.build.targets.wheel.force-include]
"vendor/pycookiecheat-LICENSE" = "pycookiecheat-LICENSE"

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "vendor/pycookiecheat/src/",
    "vendor/pycookiecheat-LICENSE",
    "pyproject.toml",
    "README.md",
]
