[project]
name = "slacktokengetter"
version = "0.1.9"
description = "Gets Slack tokens - wrapper around slacktokens providing a CLI entrypoint"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = "MIT AND GPL-3.0-only"
dependencies = [
    "leveldb==0.201",
    "cryptography==43.*",
    "keyring==25.*",
]
classifiers= [
    "Natural Language :: English",
    "Programming Language :: Python :: 3.11",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Topic :: Utilities",
]

[project.urls]
homepage = "https://github.com/skissane/slacktokengetter"
repository = "https://github.com/skissane/slacktokengetter"

[project.scripts]
slacktokengetter = "slacktokengetter:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/slacktokengetter", "vendor/pycookiecheat/src/pycookiecheat"]

[tool.hatch.build.targets.wheel.force-include]
"vendor/pycookiecheat-LICENSE" = "pycookiecheat-LICENSE"
"vendor/slacktokens/slacktokens.py" = "slacktokens.py"
"vendor/slacktokens-LICENSE" = "slacktokens-LICENSE"

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "vendor/pycookiecheat/src/",
    "vendor/pycookiecheat-LICENSE",
    "vendor/slacktokens/slacktokens.py",
    "vendor/slacktokens-LICENSE",
    "pyproject.toml",
    "README.md",
]
